--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
-*,
+/* *,
 *::before,
 *::after {
     box-sizing: border-box;
-}
+} */
 
 :root {
     --primary-text-color: #757575;
@@ -19,10 +19,17 @@
 body {
     background-color: var(--white-color);
     color: var(--primary-text-color);
+    margin: 0;
 
     font-family: Roboto, sans-serif;
 }
 
+.container{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 2px solid tomato;
+}
 
 .link {
     text-decoration: none;
