--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-/* *,
-*::before,
-*::after {
-    box-sizing: border-box;
-} */
-
 :root {
     --primary-text-color: #757575;
     --title-text-color: #212121;
@@ -19,13 +13,25 @@
 body {
     background-color: var(--white-color);
     color: var(--primary-text-color);
-    margin: 0;
+    /* margin: 0; */
 
     font-family: Roboto, sans-serif;
 }
 
+h1, h2, h3, ul {
+    margin: 0;
+    padding: 0;
+}
+
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 .container{
     width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
     outline: 2px solid tomato;
@@ -38,6 +44,7 @@ body {
 .list {
     list-style: none;
 }
+
 
 /* Header */
 
@@ -94,27 +101,37 @@ body {
 
 .hero-title {
     color: var(--white-color);
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+
+    margin-bottom: 30px;
 }
 
 .button-hero {
     background-color: var(--accent-color);
     color: var(--white-color);
+
+    border-radius: 4px;
+    border: transparent;
+    padding: 10px 32px;
+    min-width: 216px;
+    height: 50px;
+
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     align-items: center;
-    text-align: center;
     letter-spacing: 0.06em;
     cursor: pointer;
 }
 
 /* features */
+
 
 .features-title {
     color: var(--title-text-color);
@@ -123,15 +140,21 @@ body {
     line-height: 1.14px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+
+    margin-bottom: 10px;
 }
 
 .features .paragraph {
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+
+    margin: 0;
 }
 
 /* Work */
+
+
 
 .work-title {
     color: var(--title-text-color);
@@ -140,6 +163,8 @@ body {
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
+
+    margin-bottom: 50px;
 }
 
 /* team */
@@ -155,6 +180,12 @@ body {
     line-height: 1.16;
     text-align: center;
     letter-spacing: 0.03em;
+
+    margin-bottom: 50px;
+}
+
+.team-img {
+    margin-bottom: 30px;
 }
 
 .team-subtitle {
@@ -163,18 +194,24 @@ body {
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
+
+    margin-bottom: 10px;
 }
 
 .team-text {
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
+
+    margin: 0;
 }
 
 /* footer */
 
  .footer {
     background-color: var(--background-color-hero);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer-logo {
@@ -188,6 +225,13 @@ body {
 
 .footer .logo-divided {
     color: var(--accent-color);
+}
+
+.footer-list{
+    margin-top: 20px;
+}
+.footer-list > .list:not(:last-child) {
+    margin-bottom: 9px;
 }
 
 .footer .address {
