--- a/css/styles.css
+++ b/css/styles.css
@@ -255,9 +255,17 @@ h1, h2, h3, ul {
 /* button */
 
 .button {
+    display: inline-block;
     background-color: var(--background-secondary);
     color: var(--title-text-color);
     cursor: pointer;
+
+    border-radius: 4px;
+    border: transparent;
+    min-width: 73px;
+    padding: 6px 22px;
+
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.85;
@@ -271,7 +279,15 @@ h1, h2, h3, ul {
     color: var(--white-color);
 }
 
+.list-button {
+    margin-bottom: 50px;
+}
 /* examples of work */
+
+.examples img {
+    margin-bottom: 20px;
+}
+
 
 .examples-title {
     color: var(--title-text-color);
@@ -279,6 +295,8 @@ h1, h2, h3, ul {
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
+    margin-bottom: 4px;
+
 }
 
 .examples-paragraph {
@@ -286,6 +304,8 @@ h1, h2, h3, ul {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
 /* end */
