--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@ h1, h2, h3, ul {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    /* outline: 2px solid tomato; */
+    outline: 2px solid tomato;
 }
 
 .link {
@@ -123,6 +123,7 @@ h1, h2, h3, ul {
 .main-nav {
     display: flex;
     align-items: center;
+    border-bottom: 1px solid #ECECEC;;
 }
 
 
@@ -166,6 +167,18 @@ h1, h2, h3, ul {
 
 /* features */
 
+.hidden-header {
+    display: none;
+}   
+
+.features-list .list:not(:last-child) {
+    margin-right: 30px;
+}
+
+.features-list {
+    display: flex;
+    justify-content: space-between;
+}
 
 .features-title {
     color: var(--title-text-color);
@@ -188,7 +201,10 @@ h1, h2, h3, ul {
 
 /* Work */
 
-
+.work-list {
+    display: flex;
+    justify-content: space-between;
+}
 
 .work-title {
     color: var(--title-text-color);
@@ -202,6 +218,17 @@ h1, h2, h3, ul {
 }
 
 /* team */
+
+.team-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.border-list {
+    background-color: var(--white-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
 
 .team {
     background-color: var(--background-secondary);
@@ -224,6 +251,7 @@ h1, h2, h3, ul {
 
 .team-subtitle {
     color: var(--title-text-color);
+    text-align: center;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -233,12 +261,14 @@ h1, h2, h3, ul {
 }
 
 .team-text {
+    text-align: center;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
 
     margin: 0;
 }
+
 
 /* footer */
 
@@ -314,9 +344,23 @@ h1, h2, h3, ul {
 }
 
 .list-button {
-    margin-bottom: 50px;
+    margin-bottom: 34px;
+    display: flex;
+    justify-content: center;
 }
+
+.list-button .list + .list {
+    margin-left: 8px;
+}
+
+
 /* examples of work */
+
+.examples-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
 
 .examples img {
     margin-bottom: 20px;
@@ -330,6 +374,7 @@ h1, h2, h3, ul {
     line-height: 2;
     letter-spacing: 0.06em;
     margin-bottom: 4px;
+    margin-left: 24px;
 
 }
 
@@ -339,7 +384,12 @@ h1, h2, h3, ul {
     line-height: 1.88;
     letter-spacing: 0.03em;
     margin-top: 0px;
-    margin-bottom: 20px;
+    margin-left: 24px;
+}
+
+.examples-list .list {
+    outline: 2px solid tomato;
+    margin-bottom: 30px;
 }
 
 /* end */
