--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@
 body {
     background-color: var(--white-color);
     color: var(--primary-text-color);
-    /* margin: 0; */
 
     font-family: Roboto, sans-serif;
 }
@@ -34,7 +33,7 @@ h1, h2, h3, ul {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 .link {
@@ -67,9 +66,6 @@ h1, h2, h3, ul {
     display: flex;
 }
 
-/* .site-nav li {
-    outline: 2px solid tomato;
-} */
 
 .site-nav .list + .list {
     margin-left: 50px;
@@ -123,7 +119,11 @@ h1, h2, h3, ul {
 .main-nav {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #ECECEC;;
+    /* border-bottom: 1px solid #ECECEC; */
+}
+
+.header-border {
+    border-bottom: 1px solid #ECECEC;
 }
 
 
@@ -203,7 +203,11 @@ h1, h2, h3, ul {
 
 .work-list {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+}
+
+.work-list > .list + .list {
+    margin-left: 30px;
 }
 
 .work-title {
@@ -221,8 +225,13 @@ h1, h2, h3, ul {
 
 .team-list {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
+
+.team-list > .list + .list {
+    margin-left: 30px;
+}
+
 
 .border-list {
     background-color: var(--white-color);
@@ -269,6 +278,9 @@ h1, h2, h3, ul {
     margin: 0;
 }
 
+.team-container {
+    padding-bottom: 30px;
+}
 
 /* footer */
 
@@ -344,7 +356,7 @@ h1, h2, h3, ul {
 }
 
 .list-button {
-    margin-bottom: 34px;
+    margin-bottom: 50px;
     display: flex;
     justify-content: center;
 }
@@ -388,8 +400,16 @@ h1, h2, h3, ul {
 }
 
 .examples-list .list {
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
     margin-bottom: 30px;
+}
+
+.examples-list img {
+    margin-bottom: 0;
+}
+.examples-card {
+    border: 1px solid #EEEEEE;
+    border-top: 0;
 }
 
 /* end */
