--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,9 @@ h1, h2, h3, ul {
 .hero {
     background-color: var(--background-color-hero);
     text-align: center;
+
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 
 .hero-title {
