--- a/css/styles.css
+++ b/css/styles.css
@@ -129,8 +129,9 @@ h1, h2, h3, ul {
 
 /* Hero */
 
+
 .hero {
-    background-color: var(--background-color-hero);
+    /* background-color: var(--background-color-hero); */
     text-align: center;
 
     padding-top: 200px;
@@ -166,6 +167,21 @@ h1, h2, h3, ul {
     align-items: center;
     letter-spacing: 0.06em;
     cursor: pointer;
+}
+
+.box {
+    /* max-width: 1600px;
+    height: 600px; */
+    margin-left: auto;
+    margin-right: auto;
+    background-image: linear-gradient(
+        to right,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)),
+        url(../images/imghero.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 /* features */
@@ -290,6 +306,17 @@ h1, h2, h3, ul {
 
 .team-container {
     padding-bottom: 30px;
+}
+
+/* customers */
+
+.customers-title {
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 /* footer */
